--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -16,24 +17,24 @@
         <h2 class="w-100 mt-5 text-center">Sign Up</h2>
         <form class=" w-75 m-auto">
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
-              <label for="username" class="form-label">User Name</label>
-              <input type="text" class="form-control" id="username">
+                <label for="username" class="form-label">User Name</label>
+                <input type="text" class="form-control" id="username">
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="exampleCheck">Confirm Password</label>
                 <input type="password" class="form-control" id="exampleCheck">
             </div>
             <button type="submit" class="btn w-100 btn-primary">Sign Up</button>
-          </form>
+        </form>
     </div>
 </body>
 
-</html> -->
+</html>
