--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -35,18 +36,22 @@
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email_sign_up" aria-describedby="emailHelp">
+                <p class="text-danger" id="validationEmail"></p>
             </div>
             <div class="mb-3">
                 <label for="username" class="form-label">User Name</label>
                 <input type="text" class="form-control" id="username">
+                <p class="text-danger" id="validationUsername"></p>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password_sign_up">
+                <p class="text-danger" id="validationPassword"></p>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="exampleCheck">Confirm Password</label>
                 <input type="password" class="form-control" id="pass_confirm">
+                <p class="text-danger" id="validationConPass"></p>
             </div>
             <button type="submit" id="sign-up" class="btn w-100 btn-primary">Sign Up</button>
             <p class="w-100 text-center mt-3 go-sign-in">Sign In</p>
