--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div style="display: none;" class="contain-sign-in container w-50 mt-5 pb-3 b-radius">
+    <div class="contain-sign-in container w-50 mt-5 pb-3 b-radius">
         <h2 class="w-100 mt-5 text-center">Sign In</h2>
         <form class=" w-75 m-auto">
             <div class="mb-3">
@@ -27,7 +27,6 @@
             </div>
             <button type="submit" id="sign-in" class="btn w-100 btn-primary">Sign In</button>
             <p class="w-100 text-center mt-3 go-sign-up">Sign Up</p>
-            <a href="views/play_quiz_view/play_quiz_view.html">Play Quiz</a>
         </form>
     </div>
     <div class="contain-sign-up container w-50 mt-5 pb-3 b-radius">
@@ -56,9 +55,8 @@
             <button type="submit" id="sign-up" class="btn w-100 btn-primary">Sign Up</button>
             <p class="w-100 text-center mt-3 go-sign-in">Sign In</p>
         </form>
-        <a href="views/play_quiz_view/play_quiz_view.html">Play Quiz</a>
     </div>
-    <div  class="contain-home w-100">
+    <div class="contain-home w-100">
         <nav>
             <ul>
                 <a href="../../index.html"><img src="../../images/quiz_logo.png" /></a>
