--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
     <div  class="contain-home w-100">
         <nav>
             <ul>
-                <a href="../../index.html"><img src="../../images/quiz_logo.png" /></a>
-                <h2>Quiz App</h2>
+                <a href="../../index.html"><img src="../../images/logo2.png" /></a>
+                <h3>Quiz App</h3>
             </ul>
             <ul>
                 <li class="active"><a href="edit.html">Edit quiz</a></li>
@@ -71,7 +71,7 @@
         </nav>
         <div class="container mt-5 contain-link d-flex w-75 m-auto">
             <div class="play-quiz control-img">
-                <img src="images/play.png" alt="">
+                <img src="images/quiz.png" alt="">
                 <div class="w-100 btn-link">
                     <a class="text-white text-decoration-none mt-3" href="views/play_quiz_view/play_quiz_view.html">Play Quiz</a>
                 </div>
