#11 validation login and make the condition that one email and password can sign up 1 time

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,12 @@
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email_sign_in" aria-describedby="emailHelp">
             </div>
+            <div class="text-danger" id="validationEmailLogin"></div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password_sign_in">
             </div>
+            <div class="text-danger" id="validationPasswordLogin"></div>
             <button type="submit" id="sign-in" class="btn w-100 btn-primary">Sign In</button>
             <p class="w-100 text-center mt-3 go-sign-up">Sign Up</p>
         </form>
