Save code for pull

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                 <h3>Quiz App</h3>
             </ul>
             <ul>
-                <li class="active user-name">67890</li>
+                <li class="active user-name">User Name</li>
                 <li id="log-out" class="text-danger"> Sign Out </li>
             </ul>
         </nav>
