--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -66,7 +68,7 @@
             </ul>
             <ul>
                 <li class="active user-name">User Name</li>
-                <li id="log-out" class="text-danger"> Sign Out </li>
+                <li id="log-out" class="text-danger"><i class='fas fa-sign-out-alt' style='font-size:38px;color:red'></i> </li>
             </ul>
         </nav>
         <div class="container mt-5 contain-link d-flex w-75 m-auto">
