--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
+    
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -60,18 +63,26 @@
             <p class="w-100 text-center mt-3 go-sign-in">Sign In</p>
         </form>
     </div>
-    <div class="contain-home w-100">
-        <nav>
-            <ul>
-                <a href="../../index.html"><img src="../../images/logo2.png" /></a>
-                <h3>Quiz App</h3>
-            </ul>
-            <ul>
-                <li class="active user-name">User Name</li>
-                <li id="log-out" class="text-danger"><i class='fas fa-sign-out-alt' style='font-size:38px;color:red'></i> </li>
-            </ul>
+    <div  class="contain-home w-100">
+        <nav id="navbar-menu" class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="d-flex">
+                    <a href="../../index.html"><img src="../../images/logo2.png" /></a> 
+                    <h2 class="logo-title">Quiz App</h2>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    </ul>
+                </div>
+                <form class="d-flex">
+                    <button class="border-0 bg-sm-none user-name">67890</button>
+                    <button id="log-out" class="border-0">
+                        <i class="fa fa-sign-out" style="font-size:24px; color:red;"></i>
+                </button>
+                </form>
+            </div>
         </nav>
-        <div class="container mt-5 contain-link d-flex w-75 m-auto">
+        <div class="container mt-5 contain-link w-100 d-lg-flex m-auto">
             <div class="play-quiz control-img">
                 <img src="images/quiz.png" alt="">
                 <div class="w-100 btn-link">
